--- a/cloudbuild-backend.yaml
+++ b/cloudbuild-backend.yaml
@@ -1,17 +1,17 @@
 steps:
   # Build the backend Docker image
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/$PROJECT_ID/task-backend', './backend']
+    args: ['build', '-t', 'gcr.io/$PROJECT_ID/app-backend', './backend']
   
   # Push the image to Container Registry
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/task-backend']
+    args: ['push', 'gcr.io/$PROJECT_ID/app-backend']
   
   # Deploy to Cloud Run
   - name: 'gcr.io/cloud-builders/gcloud'
     args: [
-      'run', 'deploy', 'task-backend',
-      '--image', 'gcr.io/$PROJECT_ID/task-backend',
+      'run', 'deploy', 'app-backend',
+      '--image', 'gcr.io/$PROJECT_ID/app-backend',
       '--platform', 'managed',
       '--region', 'us-central1',
       '--allow-unauthenticated',
