--- a/cloudbuild-frontend.yaml
+++ b/cloudbuild-frontend.yaml
@@ -3,20 +3,20 @@ steps:
   - name: 'gcr.io/cloud-builders/docker'
     args: [
       'build', 
-      '--build-arg', 'VITE_API_URL=YOUR_BACKEND_DEPLOYMENT_URL_HERE',
-      '-t', 'gcr.io/$PROJECT_ID/task-frontend', 
+      '--build-arg', 'VITE_API_URL=https://task-backend-422209304891.us-central1.run.app/',
+      '-t', 'gcr.io/$PROJECT_ID/app-frontend', 
       './frontend'
     ]
   
   # Push the image to Container Registry
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/task-frontend']
+    args: ['push', 'gcr.io/$PROJECT_ID/app-frontend']
   
   # Deploy to Cloud Run
   - name: 'gcr.io/cloud-builders/gcloud'
     args: [
-      'run', 'deploy', 'task-frontend',
-      '--image', 'gcr.io/$PROJECT_ID/task-frontend',
+      'run', 'deploy', 'app-frontend',
+      '--image', 'gcr.io/$PROJECT_ID/app-frontend',
       '--platform', 'managed',
       '--region', 'us-central1',
       '--allow-unauthenticated',
