--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,6 +2,11 @@ FROM node:18-alpine as build
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
+
+# Accept build argument 
+ARG VITE_API_URL 
+ENV VITE_API_URL=$VITE_API_URL
+
 COPY . .
 ARG VITE_API_URL
 ENV VITE_API_URL=$VITE_API_URL
