updated starter files

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,9 +3,7 @@ WORKDIR /app
 COPY package*.json ./
 RUN npm install
 
-# Accept build argument 
-ARG VITE_API_URL 
-ENV VITE_API_URL=$VITE_API_URL
+# Add your build arguments here
 
 COPY . .
 ARG VITE_API_URL
